--- a/style.css
+++ b/style.css
@@ -1,100 +1,120 @@
-*,body,html{
-    font-family: "Goudy Bookletter 1911","Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    padding:0;
-    margin:0;
+*,
+body,
+html {
+    font-family: "Goudy Bookletter 1911", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-.outer{
-    display:flex;
+.outer {
+    display: flex;
     flex-direction: row;
     width: 100vw;
     height: 100vh;
 }
 
-.sidebar{
-    display:flex;
+.sidebar {
+    display: flex;
     flex-direction: column;
     width: 33%;
     height: 100%;
     background-image: url("photo-1667312939934-60fc3bfa4ec0.avif");
     background-position: center;
-    gap:5rem;
+    gap: 5rem;
 }
 
-.wrapperL{
-    display:flex;
-    background-color: rgb(255,255,255,.25);
-    margin-top:150px;
+.wrapperL {
+    display: flex;
+    background-color: rgb(255, 255, 255, .25);
+    margin-top: 150px;
     justify-content: space-between;
     align-items: center;
 }
 
-.wrapperR{
-    background-color: rgb(255,255,255,.25);
-    margin-top:150px;
+.wrapperR {
+    background-color: rgb(255, 255, 255, .25);
+    margin-top: 150px;
 }
 
-.library{
-    display:flex;
+.library {
+    display: flex;
     flex-direction: column;
-    width:67%;
-    height:100%;
-    background-image: linear-gradient(rgba(119, 107, 91, 0.37), rgba(37, 27, 1, 0.932)),url("photo-1532153955177-f59af40d6472.avif");
+    width: 67%;
+    height: 100%;
+    background-image: linear-gradient(rgba(119, 107, 91, 0.37), rgba(37, 27, 1, 0.932)), url("photo-1532153955177-f59af40d6472.avif");
     background-position: center;
     justify-content: space-between;
 }
 
-.outertextL{
-    display:flex;
+.outertextL {
+    display: flex;
     font-size: 5rem;
     margin-left: 50px;
     justify-content: flex-start;
 }
 
-.outertextR{
-    display:flex;
+.outertextR {
+    display: flex;
     font-size: 5rem;
     margin-right: 50px;
     justify-content: flex-end;
 }
 
-.newBookBtn, .btn{
-    margin-right:50px;
-    width:200px;
-    height:50px;
+.newBookBtn,
+.btn {
+    margin-right: 50px;
+    width: 200px;
+    height: 50px;
     border-radius: 2rem;
     font-size: 1.5rem;
     background-color: antiquewhite;
-    box-shadow: 5px 5px 5px 5px rgba(53, 53, 53, 0.082);
+    box-shadow: 5px 5px 5px 5px rgba(83, 79, 79, 0.178);
+    border: none;
 }
 
-.content{
-    display:flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    max-width:80%;
-    max-height:calc(100% - 150px);
-    border: 5px solid black;
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 80%;
+    height: calc(100% - 150px);
+    margin: 10%;
 }
 
-.newBook{
-    display:flex;
+.newBook {
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    gap:2rem;
-    opacity:0.85;
+    gap: 2rem;
+    opacity: 0.85;
     font-weight: bold;
 }
 
-.newBook input,.newBook select, .newBook label{
+.newBook input,
+.newBook select,
+.newBook label {
     font-size: 2rem;
-    width:300px;
-    height:75px;
+    width: 300px;
+    height: 75px;
 }
 
-.book{
-    height:200px;
-    width:100px;
+.book {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    width: 150px;
+    border: 1px solid black;
+    box-sizing: border-box;
+
+}
+
+.bookText {
+    width: 80%;
+    height: 50%;
     font-size: 1rem;
+    transform: rotate(-90deg);
 }
