--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 .sidebar {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 33%;
     height: 100%;
     background-image: url("photo-1667312939934-60fc3bfa4ec0.avif");
@@ -60,9 +61,18 @@ html {
     justify-content: flex-end;
 }
 
-.newBookBtn,
-.btn {
+.newBookBtn {
     margin-right: 50px;
+    width: 200px;
+    height: 100px;
+    border-radius: 2rem;
+    font-size: 1.5rem;
+    background-color: antiquewhite;
+    box-shadow: 5px 5px 5px 5px rgba(83, 79, 79, 0.178);
+    border: none;
+}
+
+.submitButton {
     width: 200px;
     height: 100px;
     border-radius: 2rem;
@@ -75,6 +85,7 @@ html {
 .content {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
     width: 80%;
@@ -87,8 +98,11 @@ html {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    /* min-width: 100%;
+    min-height: 55%; */
     gap: 2rem;
     opacity: 0.85;
+    margin-bottom: 400px;
     font-weight: bold;
 }
 
@@ -136,4 +150,33 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.error {
+    border: 1px solid red;
+}
+
+.success {
+    border: 1px solid green;
+}
+
+.footer{
+    text-align: center;
+    margin-bottom:0;
+}
+
+.libraryFooter{
+    color:white;
+}
+
+.sidebarFooter{
+    margin-left:-525px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    color:slateblue;
 }
