--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*,
+:root,*,
 body,
 html {
     font-family: "Goudy Bookletter 1911", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -98,8 +98,6 @@ html {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    /* min-width: 100%;
-    min-height: 55%; */
     gap: 2rem;
     opacity: 0.85;
     margin-bottom: 400px;
@@ -153,11 +151,11 @@ html {
 }
 
 .error {
-    border: 1px solid red;
+    border: 2px solid red;
 }
 
 .success {
-    border: 1px solid green;
+    border: 2px solid green;
 }
 
 .footer{
