--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-:root,*,
+:root,
+*,
 body,
 html {
     font-family: "Goudy Bookletter 1911", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -134,18 +135,18 @@ html {
     text-shadow: 2px 2px 2px 2px whitesmoke;
 }
 
-.bookBtn{
-    min-height:25px;
-    min-width:75px;
+.bookBtn {
+    min-height: 25px;
+    min-width: 75px;
     font-size: 1rem;
     border-radius: 1rem;
     box-shadow: 5px 5px 5px 5px rgba(83, 79, 79, 0.178);
 }
 
-.buttonContainer{
-    min-height:70px;
+.buttonContainer {
+    min-height: 70px;
     min-width: 75px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
@@ -159,23 +160,23 @@ html {
     border: 2px solid green;
 }
 
-.footer{
+.footer {
     text-align: center;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
-.libraryFooter{
-    color:white;
+.libraryFooter {
+    color: white;
 }
 
-.sidebarFooter{
-    margin-left:-525px;
+.sidebarFooter {
+    margin-left: -525px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-a:visited{
-    color:slateblue;
+a:visited {
+    color: slateblue;
 }
